--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,5 +19,27 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --configuration Release
-   # - name: Test
-   # run: dotnet test --no-build --verbosity normal
+    - name: Test
+      run: dotnet test --no-build --verbosity normal
+      
+  Build-and-Push-Docker-Image:
+    runs-on: ubuntu-latest
+    needs: build
+    name: Docker Build, Tag, Push
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v1
+    - name: Download built artifact
+      uses: actions/download-artifact@main
+      with:
+        name: webpack artifacts
+        path: public
+    - name: Build container image
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{github.actor}}
+        password: ${{secrets.GITHUB_TOKEN}}
+        registry: docker.pkg.github.com
+        repository: marvelamar/SampleDotnetApp/dotnet-sample
+        tag_with_sha: true
