--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,8 +3,6 @@ name: .NET
 on:
   push:
     branches: [ main ]
-    paths:
-    - "**Dockerfile**"
 
 jobs:
   build:
@@ -23,6 +21,10 @@ jobs:
       run: dotnet build --configuration Release
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - uses: actions/upload-artifact@main
+      with:
+        name: webpack artifacts
+        path: public/
       
   Build-and-Push-Docker-Image:
     runs-on: ubuntu-latest
