--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       run: dotnet build --configuration Release
     - name: Test
       run: dotnet test --no-build --verbosity normal
-    - uses: actions/upload-artifact@main
+    - uses: actions/upload-artifact@v2
       with:
         name: webpack artifacts
         path: public/
