--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,6 +3,8 @@ name: .NET
 on:
   push:
     branches: [ main ]
+env:
+  PUBLISH_PATH: '.'
 
 jobs:
   build:
@@ -21,6 +23,8 @@ jobs:
       run: dotnet build --configuration Release
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: Publish
+      run: dotnet publish --configuration Release -o '${{env.PUBLISH_PATH}}/publish'
     - uses: actions/upload-artifact@v2
       with:
         name: webpack artifacts
@@ -35,7 +39,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v1
     - name: Download built artifact
-      uses: actions/download-artifact@main
+      uses: actions/download-artifact@v2
       with:
         name: webpack artifacts
         path: public
