--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,3 +30,26 @@ jobs:
       with:
         name: published artifact
         path: publish
+        
+        
+  Build-and-Push-Docker-Image:
+    runs-on: ubuntu-latest
+    needs: build
+    name: Docker Build, Tag, Push
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v1
+    - name: Download built artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: published artifact
+        path: publish
+    - name: Build container image
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{github.actor}}
+        password: ${{secrets.GITHUB_TOKEN}}
+        registry: docker.pkg.github.com
+        repository: marvelamar/SampleDotnetApp/MyApp
+        tag_with_sha: true
